Fix minor alignment/clarity issues

--- a/styles/common.css
+++ b/styles/common.css
@@ -162,3 +162,7 @@ img {
   float: right;
   width: 47%;
 }
+
+.source {
+  font-size: 0.7em;
+}
